Fixed #3658 [IE6] Editor document has horizontal scrollbar on long lines
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@3784 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/contents.css
+++ b/contents.css
@@ -1,4 +1,4 @@
-﻿/*
+﻿﻿/*
 Copyright (c) 2003-2009, CKSource - Frederico Knabben. All rights reserved.
 For licensing, see LICENSE.html or http://ckeditor.com/license
 */
@@ -15,6 +15,14 @@ body
 	/* Remove the background color to make it transparent */
 	background-color: #fff;
 }
+
+html
+{
+	/* #3658: [IE6] Editor document has horizontal scrollbar on long lines
+	To prevent this misbehavior, we show the scrollbar always */
+	_overflow-y: scroll
+}
+
 img:-moz-broken
 {
 	-moz-force-broken-image-icon : 1;
